--- a/src/containers/resume/style.scss
+++ b/src/containers/resume/style.scss
@@ -1,87 +1,104 @@
 .resume {
-    height: 100%;
-  }
-  .timeline {
+  height: 100%;
+}
+
+.timeline {
+  display: flex;
+  width: 100%;
+  padding: 20px;
+
+  &__experience,
+  &__education {
+    width: 50%;
+    gap: 2rem;
     display: flex;
-    width: 100%;
-    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+
+    &__header-text {
+      display: inline-block;
+      color: var(--selected-theme-sub-text-color);
+      font-size: 22px;
+      font-weight: 600;
+      line-height: 1em;
+      letter-spacing: 0.5px;
+      position: relative;
+      text-transform: uppercase;
+      padding: 5px 10px;
+      border-bottom: 2px solid var(--selected-theme-main-color);
+
+      &::before,
+      &::after {
+        position: absolute;
+        content: "";
+        width: 2px;
+        height: 5px;
+        background-color: var(--selected-theme-main-color);
+        bottom: -1px;
+      }
+
+      &::before {
+        left: 0;
+      }
+
+      &::after {
+        right: 0;
+      }
+    }
+
+    &__vertical-timeline-element {
+      padding: 0px 0px 30px 0px;
+
+      &:last-child {
+        padding-bottom: 0;
+      }
+
+      .vertical-timeline-element-content {
+        box-shadow: none;
+        padding: 20px 20px;
+
+        .vertical-timeline-element-date {
+          font-size: 2rem;
+          color: var(--selected-theme-sub-text-color);
+          opacity: 1;
+        }
+      }
+
+      .vertical-timeline-element-content-arrow {
+        display: none;
+      }
+
+      .vertical-timeline-element-title-wrapper {
+        display: flex;
+        flex-direction: column; // Change to column for better responsiveness
+        align-items: center;
+
+        h3,
+        h4 {
+          font-size: 15px;
+          text-align: center; // Center-align text for better responsiveness
+        }
+
+        h4 {
+          margin-top: 8px; // Adjust margin-top for better spacing
+        }
+      }
+
+      p {
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .timeline {
+    flex-direction: column;
+
     &__experience,
     &__education {
-      width: 50%;
-      gap: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      &__header-text {
-        display: inline-block;
-        color: var(--selected-theme-sub-text-color);
-        font-size: 22px;
-        font-weight: 600;
-        line-height: 1em;
-        letter-spacing: 0.5px;
-        position: relative;
-        text-transform: uppercase;
-        padding: 5px 10px;
-        border-bottom: 2px solid var(--selected-theme-main-color);
-      }
-      &__header-text::before, &__header-text::after{
-          position: absolute;
-          content: "";
-          width: 2px;
-          height: 5px;
-          background-color: var(--selected-theme-main-color);
-          bottom: -1px;
-      }
-      &__header-text::before{
-          left: 0;
-      }
-       &__header-text::after {
-           right: 0;
-       }
-       &__vertical-timeline-element{
-          padding: 0px 0px 30px 0px;
-          &:last-child{
-              padding-bottom: 0;
-          }
-           .vertical-timeline-element-content{
-               box-shadow: none;
-               padding: 20px 20px;
-               .vertical-timeline-element-date{
-                font-size: 2rem;
-                color: var(--selected-theme-sub-text-color);
-                opacity: 1;
-               }
-           }
-           .vertical-timeline-element-content-arrow{
-               display: none;
-           }
-           .vertical-timeline-element-title-wrapper{
-             display: flex;
-             align-items: center;
-             h3,h4{
-               font-size: 15px;
-             }
-             h4{
-               margin-left: 8px;
-             }
-           }
-           p{
-            font-size: 18px;
-          }
-       }
-    }
-  }
-  
-  @media only screen and (max-width: 768px) {
-    .timeline {
-      display: flex;
-      flex-direction: column;
       width: 100%;
-      &__experience,
-      &__education {
-        width: 100%;
-        gap: 2rem;
-      }
+      gap: 1rem; // Adjust gap for better spacing
     }
   }
-  
+}
